# gapfill-landsat

./: .gitignore  .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  environment.yml  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
cloud_filler/: __init__.py  cloud_filler.py  knn_filler.py
docs/: Makefile  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst  make.bat  usage.md  usage.rst
src/gapfill_landsat/: __init__.py  gapfill_landsat.py  knn_filler.py
tests/: __init__.py  test_cloud_filler.py  test_gapfill_landsat.py
