[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gapfill-landsat"
version = "0.1.0"
authors = [{ name = "Philip Blankenau", email = "phil.blankenau@gmail.com" }]
description = "Tools for filling missing data in satellite images caused by sensor malfunctions or masked out clouds."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = ["numpy", "numba"]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov",
    "ruff",
    "tox",
    "tox-uv",
    "bump2version",
    "twine",
]

[project.urls]
"Homepage" = "https://github.com/pblankenau2/gapfill-landsat"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.ruff]
line-length = 88

[tool.pytest.ini_options]
addopts = "--cov=src/gapfill_landsat --cov-report=xml"

[tool.tox]
legacy_tox_ini = """
[tox]
minversion = 3.11
isolated_build = true
envlist = py311,py312,py313,py314

[testenv]
deps =
    pytest
    pytest-cov
commands =
    pytest
"""
